[FIX] website_event_track_online: set overflow-x to auto in event agenda
In order to see the overflow-x scrollbar only when needed, overflow-x have been
set to auto instead of scroll for agenda table.

Task ID: 2314778

X-original-commit: 220336bf6455d69168fb89fc1345c6d746990915

--- a/addons/website_event_track_online/static/src/scss/event_track_templates.scss
+++ b/addons/website_event_track_online/static/src/scss/event_track_templates.scss
@@ -26,7 +26,7 @@
  * AGENDA
  */
 .o_we_online_agenda {
-    overflow-x: scroll;
+    overflow-x: auto;
 
     table {
         border-collapse: separate;
